update interactive plots and questions

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -133,5 +133,9 @@ body {
   font-size: smaller;
 }
 
-
+/* limit height and enable scrollbars */
+.scrollable-table {
+  max-height: 300px;
+  overflow-y: auto;
+}
 
